# feup-aed-project-1

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Class.cpp  Class.h  ClassSchedule.cpp  ClassSchedule.h  Doxyfile  Lesson.cpp  Lesson.h  README.md  Request.cpp  Request.h  Schedule.cpp  Schedule.h  ScheduleManager.cpp  ScheduleManager.h  Slot.cpp  Slot.h  Student.cpp  Student.h  Test.cpp  Test.h  UcClass.cpp  UcClass.h  draft.txt  main.cpp  read_csv.cpp  trabalho
classes/: Class.cpp  Class.h  Lesson.cpp  Lesson.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h
data/: .~lock.classes.csv#  classes.csv  classes_per_uc.csv  students_classes.csv
docs/: Doxyfile
docs/html/: _app_8h_source.html  _class_schedule_8h_source.html  _request_8h_source.html  _schedule_manager_8h_source.html  _slot_8h_source.html  _student_8h_source.html  _test_8h_source.html  _uc_class_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_app__coll__graph.dot  class_class_schedule-members.html  class_class_schedule.html  class_class_schedule__coll__graph.dot  class_request-members.html  class_request.html  class_request__coll__graph.dot  class_schedule_manager-members.html  class_schedule_manager.html  class_schedule_manager__coll__graph.dot  class_slot-members.html  class_slot.html  class_slot__coll__graph.dot  class_student-members.html  class_student.html  class_student__coll__graph.dot  class_test-members.html  class_test.html  class_uc_class-members.html  class_uc_class.html  class_uc_class__coll__graph.dot  classes.html  dir_3a8feefd1cb361d121d387a3d880dbce.html  (+17 more)
(+111 files in other folders)
